update java lsp setting